deps/v8/test/message/fail/modules-duplicate-export5.out
*%(basename)s:8: SyntaxError: Duplicate export of 'foo'
export * as foo from "./doesnt-even-matter.mjs";
            ^^^
SyntaxError: Duplicate export of 'foo'
